--- a/Dessert Style.css
+++ b/Dessert Style.css
@@ -1,11 +1,52 @@
-ul {
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
-  color: red;
-}
-ul.navtop li {
-  float: left;
-  display: inline;
 
+nav{
+  position:relative;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+nav ul {
+  list-style-type: none;
+  display: block;
+  text-align: center;
+  overflow: hidden;
+  color: maroon;
+  height: 6%;
+
+}
+
+ul.topnav li {
+  display: inline-block;
+  margin-left: 5%;
+  margin-right: 5%;
   }
+
+li a{
+  display: inline-block;
+  color: white;
+  text-align: center;
+  padding: 14px 16px;
+  background-color: maroon;
+  font-size: 15px;
+}
+footer{
+  text-align:center;
+}
+#welc{
+  font-size: 36pt;
+  font-style: italic;
+  font-family: Damascus;
+  text-align: center;
+}
+
+.welcome{
+  text-align: center;
+  background-color: turquoise;
+  font-size: 24pt;
+  font-family: Damascus;
+}
+
+#img1{
+  max-width: 85%;
+  align-content: center;
+}
